start and pause music added, new combination, pretty bootstrap css

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,1 @@
-Show youtube box because chrome and mobile devices doesn't allow autoplay
-
-http://crazyfunnypics.com/gifs_White_ninja_dance.gif
-https://www.youtube.com/watch?v=68ugkg9RePc
-
+add new combinations
