page documentation added

--- a/documentation/introduction/introduction.tex
+++ b/documentation/introduction/introduction.tex
@@ -24,6 +24,6 @@ Sorry, I can not control myself.
 \label{sec:tec}
 
 Well, since this program is a web page, we have HTML, CSS and JS.
-It is important to say that the music that plays in the page is from youtube.
+It is important to say that the music that plays in the page is from Youtube.
 
 %------------------------------------------------
