--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -32,7 +32,7 @@
 
 %\setlength\parindent{0pt} % Uncomment to remove all indentation from paragraphs
 
-\graphicspath{{Pictures/}} % Specifies the directory where pictures are stored
+\graphicspath{{images/}} % Specifies the directory where pictures are stored
 
 \begin{document}
 
